fix: updates demo example, patches bugs discovered
